    * Fixed return values of _input functions in cgdb.c: These functions would
    quit on there own. They have no right to do so, they should report an
    error and have cgdb quit in some common location
    * Changed configure from --with-driver to --with-drivers: The reason for
    this is because now there are several driver programs that can be used to
    test cgdb.

03/25/2003 Bob Rossi <bob_rossi@cox.net>

    * Integrated new input unit into cgdb: cgdb no longer uses getch to get
    input from the terminal. This is useful because now cgdb can know the high
    level characters ( CGDB_KEY_UP ) and it can also know the esc seq
    associated with them. So it can send them to readline.

03/23/2003 Bob Rossi <bob_rossi@cox.net>

    * Fixed interface to tgdb to allow the new readline support: This fixes
    the bug where alt-D did not work, and the ^r ( reverse search ) bug would
    cause cgdb to block. It also fixes the existing bug in cgdb, it did not
    print the output of tgdb_send.

03/06/2003 Mike Mueller <mmueller@cs.uri.edu>

    * White terminal fix: Fixed cgdb to automatically paint the entire
    window black when opened, so the screen isn't messy on white backgrounds.
    * Fixed search repeats: Modified 'n' key behavior so that it does nothing
    when pressed if no search was previously specified.

03/06/2003 Bob Rossi <bob_rossi@cox.net>

    * Updated cgdb to work with the new Command interface. tgdb now returns a
    nice queue instead of a triple pointer 'struct Command *'

03/02/2003 Bob Rossi <bob_rossi@cox.net>

    * Readline has been cleanly added with a pty: Now, cgdb opens a pty,
    tells readline that that is its stdin, it also creates an ordinary pipe to
    read from readline's ouput.
    * Made readline not install any signal handler's

02/26/2003 Bob Rossi <bob_rossi@cox.net>

    * Implemented new changes to the libtgdb interface to support readline:
    cgdb should now be able to send all the data the user typed to tgdb, 